fix: course outline overflow width and unit item

--- a/src/course-home/outline-tab/CollapsibleSequenceLink.scss
+++ b/src/course-home/outline-tab/CollapsibleSequenceLink.scss
@@ -14,6 +14,7 @@
 }
 
 .subsection-item {
+  overflow: hidden;
   border-bottom: 1px solid transparent;
 
   .subsection-title-item {
@@ -68,8 +69,11 @@
     }
   }
 
-  &.learned .subsection-title-item a {
-    color: var(--color-text-default);
+  &.learned {
+    .subsection-title-item a {
+      color: var(--color-text-default);
+      
+    }
   }
 
   &.is-expand {
@@ -89,7 +93,6 @@
 
 .collapsible-sequence-link-container {
   .unit-item {
-    padding: 0.5rem 0;
     display: flex;
     align-items: center;
 
@@ -101,6 +104,10 @@
       transition: 0.2s;
       display: block;
       height: 100%;
+      display: flex;
+      width: 100%;
+      padding: 0.5rem 0;
+
 
       &:hover {
         color: var(--color-hover);
